--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     max-width: 100%;
     margin-top: 10px;
     width: 650px;
-    min-height: 210px;
+    height: 210px;
     background: white;
     border-radius: 10px;
 }
@@ -40,7 +40,7 @@ body{
     max-width: 100%;
     margin-top: 15px;
     width: 650px;
-    min-height: 210px;
+    height: 210px;
     background: white;
     border: 1px solid rgb(229,230,233);
     border-radius: 7px;
@@ -65,7 +65,7 @@ body{
     max-width: 100%;
     margin-top: 15px;
     width: 650px;
-    min-height: 210px;
+    height: 210px;
     background: white;
     border: 1px solid rgb(229,230,233);
     border-radius: 7px;
