--- a/style.css
+++ b/style.css
@@ -117,8 +117,7 @@ body{
 }
 .required-box{
     border: 1px solid rgb(229,230,233);
-    border-bottom: none;
-    border-left: none;
+    border-bottom: white;
     padding-left: 20px;
     width: 100%;
     height: 10px;
@@ -126,7 +125,6 @@ body{
 }
 .required{
     color: red;
-    margin-bottom: 15px;
     font-family: roboto;
     font-size: 14px;
 }
