--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 body{
     background: rgb(240,235,248);
 }
@@ -14,7 +13,7 @@ body{
 .box1{
     margin-top: 10px;
     max-width: 650px;
-    height: 210px;
+    min-height: 220px;
     background: white;
     border-radius: 10px;
 }
@@ -120,8 +119,7 @@ body{
     border-bottom: white;
     padding-left: 20px;
     width: 100%;
-    height: 10px;
-
+    height: 35px;
 }
 .required{
     color: red;
